add new profile image and update HTML structure; remove old image, enhance styling and add social links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="main">
-        <div class="imagem">
-            <img src="fotoeu.jpeg" alt="foto eu">
-        </div>
+        
+            <img src="euu.jpeg" alt="foto eu">
+        
         <div class="text">
         <div class="titulo">
             <h2>André Luiz da Silva Peixoto</h2>
@@ -18,6 +18,19 @@
         <div class="bio">
             <p>Olá tenho 19 anos, trabalho como Estagio de Suporte tecnico na philips. Estou atualmente no Programa Philips Desenvolve, Estou começando na área de suporte, 
             Mas futuramente desejo ingressar para outras áreas dentro da Philips, ate mesmo como Dev</p>    
+        </div>
+        <div class="lista">
+            <ul>
+                <li>gosto de jogar</li>
+                <li>sou flamenguista</li>
+                <li>sou mineiro</li>
+                <li>cursando BBC</li>
+                <li>conhecimento basico em java/front/database</li>
+            </ul>
+        </div>
+        <div class="redes">
+            <a href="https://github.com/lzpeixoto-Philips">github</a>
+            <a href="#">linkedin</a>
         </div>
         </div>
     </div>
