fix typo in education list; correct "BBC" to "BCC"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>gosto de jogar</li>
                 <li>sou flamenguista</li>
                 <li>sou mineiro</li>
-                <li>cursando BBC</li>
+                <li>cursando BCC</li>
                 <li>conhecimento basico em java/front/database</li>
             </ul>
         </div>
