--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
             <a href="#">linkedin</a>
         </div>
         </div>
+        <div class="form-container">
+    <h2>Solta a voz</h2>
+    <form action="#" method="post">
+      <label for="nome">Nome</label>
+      <input type="text" id="nome" name="nome" required>
+
+      <label for="email">E-mail</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="mensagem">Mensagem</label>
+      <textarea id="mensagem" name="mensagem" required></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+        </div>
     </div>
 </body>
 </html>
