fix footer structure and add missing newline at end of file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       <button type="submit">Enviar</button>
     </form>
   </div>
-        </div><a href=""></a>
+        <div class="footer">
+            <p>Desenvolvido por André Peixoto</p>
+        </div>
     </div>
 </body>
 </html>
