--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
         <div class="footer">
             <p>Desenvolvido por André Peixoto</p>
-        </div>
+        </div> a 
     </div>
 </body>
 </html>
