--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="footer">
             <p>Desenvolvido por André Peixoto</p>
         </div>
+         <div class="footer">
+            <p>Desenvolvido por André Peixoto</p>
+        </div> 
     </div>
 </body>
 </html>
