Update footer styles for improved visibility and alignment

--- a/index.html
+++ b/index.html
@@ -53,5 +53,14 @@
         </div> 
         </div>
     </div>
+
+    <script>
+        let usuario = prompt("Qual seu nome?");
+        if (usuario != null) {
+            alert("Olá " + usuario + ", seja bem-vindo ao meu site!");
+        } else {
+            alert("Olá visitante, seja bem-vindo ao meu site!");
+        }
+    </script>
 </body>
 </html>
